# red-life-private

game/: Cargo.toml  build.rs
game/src/: main.rs
game/src/backend/: constants.rs  error.rs  gamestate.rs  generate_machines.rs  movement.rs  rlcolor.rs  screen.rs  utils.rs
game/src/game_core/: event.rs  infoscreen.rs  item.rs  player.rs  resources.rs
game/src/languages/: german.rs
game/src/machines/: machine.rs  machine_sprite.rs  trade.rs
game/src/main_menu/: button.rs  mainmenu.rs
